// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationAppearance component should display correctly when creating a new chat integration 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      New chat integration
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    New chat integration
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Away introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className=""
            color="primary"
            disabled={false}
            tag="button"
            type="submit"
          >
            Add new chat
          </Button>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name=""
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when integration is loading 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      hellosmoochintegration
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      tag="li"
    >
      Appearance
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    Appearance
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Away introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className="btn-loading"
            color="primary"
            disabled={true}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="pull-right"
            color="danger"
            confirm={[Function]}
            content="Are you sure you want to delete this integration?"
            disabled={false}
            id=""
            loading={false}
            outline={true}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name=""
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when updating an existing integration 1`] = `
<div>
  <Breadcrumb
    tag="ol"
  >
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </BreadcrumbItem>
    <BreadcrumbItem
      tag="li"
    >
      hellosmoochintegration
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      tag="li"
    >
      Appearance
    </BreadcrumbItem>
  </Breadcrumb>
  <h1>
    Appearance
  </h1>
  <Container
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Away introduction text"
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We're away!"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <Button
            className=""
            color="primary"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="pull-right"
            color="danger"
            confirm={[Function]}
            content="Are you sure you want to delete this integration?"
            disabled={false}
            id=""
            loading={false}
            outline={true}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          isOnline={true}
          mainColor="#0d87dd"
          name=""
          offlineIntroductionText="We're away!"
        />
      </Col>
    </Row>
  </Container>
</div>
`;
